# timeline

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yaml
app/: __init__.py  config.py  forms.py  model.py  models.py  routes.py
app/auth/: routes.py
app/main/: routes.py
app/templates/: _base.html  add_event.html  api_keys.html  base.html  checkin.html  delete_event_confirm.html  delete_location_confirm.html  edit_event.html  gps_data.html  import_gpx.html  index.html  location_form.html  locations.html  login.html  register.html  timeline.html  user_settings.html
app/templates/auth/: login.html  register.html
app/templates/main/: index.html
migrations/versions/: 10d568cd0cae_add_source_info_for_location.py  46e923572cb7_initial_migration.py  8533291ff46b_add_gps_positions.py  a3fb8091f808_initial_user_model_migration.py  cd83646a4136_switch_to_hashed_passwords.py  ef7908667f5f_add_api_keys.py  f76535475ba2_add_event_notes.py
tests/: test_flask_app.py  test_login.py
