[tool.poetry]
name = "timeline"
version = "0.1.0"
description = ""
authors = ["Ian Dees <ian.dees@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"

[tool.poetry.dev-dependencies]
black = "^24.10.0"
flask-migrate = "^4.0.7"
pre-commit = "^4.0.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
