[project]
name = "timeline"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gpxpy>=1.6.2",
    "pytz>=2025.2",
    "requests>=2.32.3",
]
